--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,18 +3,19 @@
 }
 
 .main {
-  min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer {
   display: flex;
-  flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
@@ -26,27 +27,13 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+  gap: 0.5rem;
 }
 
 .title {
-  margin: 0;
+  margin-bottom: 1rem;
   line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+  font-size: 2.5rem;
   text-align: center;
 }
 
@@ -54,23 +41,16 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  text-align: center;
 }
 
 .grid {
-  display: flex;
-  align-items: center;
+  display: grid;
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .card {
@@ -79,20 +59,23 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 0.0675rem solid var(--netlify-blue);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: var(--netlify-blue);
+  border-color: var(--netlify-blue);
 }
 
 .card h2 {
+  color: var(--netlify-blue);
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
@@ -103,9 +86,13 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.explainer {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.kitten {
+  margin-top: 2rem;
 }
 
 @media (max-width: 600px) {
