--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,7 +30,49 @@
   gap: 0.5rem;
 }
 
+@keyframes rainbow {
+  100%,
+  0% {
+    color: rgb(255, 0, 0);
+  }
+  8% {
+    color: rgb(255, 127, 0);
+  }
+  16% {
+    color: rgb(255, 255, 0);
+  }
+  25% {
+    color: rgb(127, 255, 0);
+  }
+  33% {
+    color: rgb(0, 255, 0);
+  }
+  41% {
+    color: rgb(0, 255, 127);
+  }
+  50% {
+    color: rgb(0, 255, 255);
+  }
+  58% {
+    color: rgb(0, 127, 255);
+  }
+  66% {
+    color: rgb(0, 0, 255);
+  }
+  75% {
+    color: rgb(127, 0, 255);
+  }
+  83% {
+    color: rgb(255, 0, 255);
+  }
+  91% {
+    color: rgb(255, 0, 127);
+  }
+}
+
 .title {
+  animation: rainbow 2.5s linear;
+  animation-iteration-count: infinite;
   margin-bottom: 1rem;
   line-height: 1.15;
   font-size: 2.5rem;
@@ -54,17 +96,30 @@
 }
 
 .card {
+  --border-color: var(--netlify-blue);
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 0.0675rem solid var(--netlify-blue);
+  border: 0.75rem solid var(--border-color);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.card:nth-of-type(2) {
+  --border-color: red;
+}
+
+.card:nth-of-type(3) {
+  --border-color: turquoise;
+}
+
+.card:nth-of-type(4) {
+  --border-color: fuchsia;
 }
 
 .card:hover,
